# auto-copy

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: test.yml
backend/: .env.example  pyproject.toml  requirements-test.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  brand.py  generation.py  integrations.py  template.py  user.py  workspace.py
backend/app/routers/: __init__.py  advanced.py  analytics.py  auth.py  brand.py  content.py  generate.py  history.py  integrations.py  templates.py  workspace.py
backend/app/schemas/: __init__.py  advanced.py  analytics.py  auth.py  brand.py  content.py  generation.py  integrations.py  workspace.py
backend/app/services/: __init__.py  analytics.py  auth.py  ollama.py
backend/tests/: conftest.py  test_auth.py  test_generate.py  test_history.py  test_main.py  test_templates.py
e2e/: package.json  playwright.config.ts
e2e/tests/: api.spec.ts  auth.spec.ts  generation.spec.ts  home.spec.ts  templates.spec.ts
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdvancedTools.tsx  AnalyticsDashboard.tsx  BrandManager.tsx  CommentsPanel.tsx  CompetitorAnalysis.tsx  ContentAnalytics.tsx  ContentGenerator.tsx  Generator.tsx  HistoryPanel.tsx  IntegrationsSettings.tsx  OutputDisplay.tsx  PersonaManager.tsx  ProjectManager.tsx  ShareModal.tsx  TagManager.tsx  (+6 more)
(+17 files in other folders)
